Archive2/7b/23ebb2a33e2c8c/output
main.cpp: In function 'int main()':
main.cpp:40:1: error: expected '}' at end of input
 }
 ^
